--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -142,6 +142,7 @@ $form-required-border-color: $form-error-color !default;
 $card-bg-color: transparent !default;
 
 // Navigation
+$nav-link-font-size: inherit !default;
 $nav-link-color: inherit !default;
 $nav-link-hover-color: inherit !default;
 $nav-link-active-color: $nav-link-hover-color !default;
