--- a/resources/views/website/assets/sass/_init.scss
+++ b/resources/views/website/assets/sass/_init.scss
@@ -20,7 +20,8 @@ $button-hover-color-info: $white !important;
 // Cards
 $card-bg-color: rgba( $black, 0.1 );
 
-// Navigation
+//
+$nav-link-font-size: 1.8rem;
 $nav-link-color: $white;
 $nav-link-hover-color: $red-light;
 $nav-link-active-color: $nav-link-hover-color;
