--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -1,4 +1,93 @@
 // Navigation
+
+html #header .header {
+    &-nav {
+        &-links {
+            justify-content: center;
+
+            .header-nav-main {
+                width: 100%;
+            }
+
+            nav {
+                width: 100%;
+
+                > ul {
+                    width: 100%;
+
+                    > li {
+                        @include for-992-up {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            flex: 1;
+                            margin-left: 0;
+
+                            &:first-child {
+                                justify-content: flex-start;
+
+                                a:not(.btn) {
+                                    padding-left: 0 !important;
+                                }
+                            }
+
+                            &:last-child {
+                                justify-content: flex-end;
+
+                                a:not(.btn) {
+                                    padding-right: 0 !important;
+                                }
+                            }
+                        }
+
+                        a {
+                            font-family: $font-family-headings;
+                            font-size: $nav-link-font-size;
+                            font-weight: 700;
+                            text-transform: initial;
+                            width: auto;
+
+                            &:not(.btn) {
+                                padding-right: $padding/2 !important;
+                                padding-left: $padding/2 !important;
+                            }
+
+                            i {
+                                margin-right: $margin/2 !important;
+                            }
+                        }
+
+                        .dropdown-item {
+                            color: $nav-link-color;
+
+                            &:hover {
+                                background: none;
+                                color: $nav-link-hover-color;
+                            }
+                        }
+
+                        .dropdown-menu {
+                            top: 70px !important;
+                        }
+                    }
+
+                    li:hover > a {
+                        color: $nav-link-hover-color !important;
+                    }
+
+                    &:not( :hover ) > li > a.active {
+                        color: $nav-link-active-color !important;
+                    }
+                }
+            }
+        }
+    }
+
+    &-btn-collapse-nav {
+        background: $purple;
+    }
+}
+
 @include for-992-down {
     #header .header-nav-main nav > ul li.dropdown,
     ul.navbar-nav > li.dropdown {
