--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -6,7 +6,7 @@
         color: $button-color;
         font-size: $font-size;
         line-height: 1;
-        padding: $padding $padding;
+        padding: $padding;
 
         &-success,
         &-primary,
