--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -137,6 +137,10 @@ $form-error-color: $red-light !important !default;
 $form-error-border-color: $form-error-color !default;
 $form-required-color: $form-error-color !default;
 $form-required-border-color: $form-error-color !default;
+$form-radio-bg-color: $cream !default;
+$form-radio-color: $black !default;
+$form-radio-checked-bg-color: $maroon !default;
+$form-radio-checked-color: $cream !default;
 
 // Cards
 $card-bg-color: transparent !default;
