--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -45,6 +45,7 @@ html #header .header {
                             font-size: $nav-link-font-size;
                             font-weight: 700;
                             text-transform: initial;
+                            text-decoration: none;
                             width: auto;
 
                             &:not(.btn) {
