--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -324,12 +324,19 @@ p {
   color: #000000;
 }
 
+span {
+  font-family: inherit;
+  font-size: inherit;
+}
+
 a {
   line-height: 1.3;
   color: inherit;
+  text-decoration: underline;
 }
 a:hover {
   transition: all 200ms ease-in-out;
+  color: #000000;
 }
 
 .highlight-color {
@@ -339,6 +346,18 @@ a:hover {
 .mf__section--maroon .highlight-color, .mf__section--purple .highlight-color {
   color: #F7F2EF;
   font-weight: 600;
+}
+
+.mb-05x {
+  margin-bottom: 7.5px !important;
+}
+
+.mb-1x {
+  margin-bottom: 15px !important;
+}
+
+.mb-2x {
+  margin-bottom: 30px !important;
 }
 
 .btn, .swal2-popup .swal2-styled.swal2-confirm {
@@ -561,7 +580,7 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 45px;
   /* &:last-of-type {
       margin-bottom: 0;
   } */
@@ -576,6 +595,9 @@ a:hover {
   line-height: 1 !important;
   padding: 7.5px;
 }
+p + .form-control {
+  margin-top: 15px;
+}
 .mf__section--purple .form-control {
   background-color: #F7F2EF;
   color: #000000;
@@ -583,20 +605,76 @@ a:hover {
 .form-check {
   padding-left: 0;
 }
+.form-check-inline {
+  margin-right: 15px;
+}
 .form-check-input {
   position: absolute !important;
   visibility: hidden;
 }
-.form-check-input:checked + label {
-  background-color: #9e3a5f;
-  color: #F7F2EF;
-}
 .form-check-label {
+  font-family: "Alegreya", serif;
+  font-size: 2.4rem;
+  font-weight: bold;
+  margin-bottom: 7.5px;
+  /* &:after {
+      border-bottom: 1px solid $cream;
+      content: '';
+      display: block;
+      margin: 0 auto $margin/2;
+      padding-top: $padding/2;
+      width: 15%;
+  } */
+}
+.form-check input[type=radio] + label,
+.form-check input[type=checkbox] + label,
+.form-check input[type=file] + label {
   background-color: #F7F2EF;
   border-radius: 8px;
   color: #000000;
+  font-family: "Roboto", sans-serif;
+  font-size: initial;
+  font-weight: 100;
   margin-bottom: 15px;
   padding: 7.5px 15px;
+  /* &:after {
+      display: none;
+  } */
+}
+.form-check input[type=radio] + label:hover,
+.form-check input[type=checkbox] + label:hover,
+.form-check input[type=file] + label:hover {
+  transition: all 200ms ease-in-out;
+  background-color: #9e3a5f;
+  color: #F7F2EF;
+  cursor: pointer;
+  opacity: 0.8;
+}
+@media (max-width: 639px) {
+  .form-check input[type=radio] + label,
+.form-check input[type=checkbox] + label,
+.form-check input[type=file] + label {
+    text-align: center;
+    width: 100%;
+  }
+}
+.form-check input[type=radio]:checked + label,
+.form-check input[type=checkbox]:checked + label,
+.form-check input[type=file]:checked + label {
+  background-color: #9e3a5f;
+  color: #F7F2EF;
+}
+.form-check input[type=file] {
+  display: none;
+}
+@media (max-width: 639px) {
+  .form-check {
+    flex-basis: 100%;
+    margin-right: 0;
+  }
+}
+.form p {
+  margin-bottom: 15px !important;
 }
 
 .form-control.is-invalid,
@@ -654,6 +732,7 @@ html #header .header-nav-links nav > ul > li a {
   font-size: 1.8rem;
   font-weight: 700;
   text-transform: initial;
+  text-decoration: none;
   width: auto;
 }
 html #header .header-nav-links nav > ul > li a:not(.btn) {
@@ -1023,9 +1102,10 @@ h4 ~ .mf__separator {
 }
 .mf__footer__col__inner__link {
   color: #ffffff !important;
+  text-decoration: none;
 }
 .mf__footer__col__inner__link:hover {
-  color: #ffffff !important;
+  color: #f1556c !important;
   text-decoration: underline !important;
 }
 .mf__footer__col--socials {
@@ -1039,7 +1119,6 @@ h4 ~ .mf__separator {
   padding-right: 0;
 }
 .mf__footer__col--socials i {
-  color: #ffffff;
   font-size: 3rem;
 }
 .mf__slider h3 {
@@ -1239,4 +1318,16 @@ h4 ~ .mf__separator {
 .mf__registration-phase-1 .card-body {
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+}
+.mf__registration-phase-2 .form-row-profile-image .w-25 {
+  margin-right: 15px !important;
+}
+.mf__registration-phase-2 .form-row-profile-image .w-25:last-child {
+  margin-right: 0 !important;
+}
+@media (max-width: 899px) {
+  .mf__registration-phase-2 .form-row-profile-image .w-25 {
+    flex-basis: calc( 50% - ( 15px/2 ) );
+    width: calc( 50% - ( 15px/2 ) ) !important;
+  }
 }
