--- a/resources/sass/_forms.scss
+++ b/resources/sass/_forms.scss
@@ -41,7 +41,7 @@ input:focus {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        margin-bottom: $margin*2;
+        margin-bottom: $margin*3;
 
         /* &:last-of-type {
             margin-bottom: 0;
@@ -59,6 +59,10 @@ input:focus {
         line-height: 1 !important;
         padding: $padding/2;
 
+        p + & {
+            margin-top: $margin;
+        }
+
 
         .mf__section--purple & {
             background-color: $cream;
@@ -69,9 +73,62 @@ input:focus {
     &-check {
         padding-left: 0;
 
+        &-inline {
+            margin-right: $margin;
+        }
+
         &-input {
             position: absolute !important;
             visibility: hidden;
+        }
+
+        &-label {
+            font-family: $form-label-font-family;
+            font-size: $form-label-font-size;
+            font-weight: bold;
+            margin-bottom: $margin/2;
+
+            /* &:after {
+                border-bottom: 1px solid $cream;
+                content: '';
+                display: block;
+                margin: 0 auto $margin/2;
+                padding-top: $padding/2;
+                width: 15%;
+            } */
+        }
+
+        input[ type='radio' ],
+        input[ type='checkbox' ],
+        input[ type='file' ] {
+            & + label {
+                background-color: $form-radio-bg-color;
+                border-radius: $border-radius;
+                color: $form-radio-color;
+                font-family: $font-family-text;
+                font-size: initial;
+                font-weight: 100;
+                margin-bottom: $margin;
+                padding: $padding/2 $padding;
+
+                /* &:after {
+                    display: none;
+                } */
+
+                &:hover {
+                    @include transition;
+
+                    background-color: $form-radio-bg-hover-color;
+                    color: $form-radio-hover-color;
+                    cursor: pointer;
+                    opacity: .8;
+                }
+
+                @include for-640-down {
+                    text-align: center;
+                    width: 100%;
+                }
+            }
 
             &:checked + label {
                 background-color: $form-radio-checked-bg-color;
@@ -79,13 +136,18 @@ input:focus {
             }
         }
 
-        &-label {
-            background-color: $form-radio-bg-color;
-            border-radius: $border-radius;
-            color: $form-radio-color;
-            margin-bottom: $margin;
-            padding: $padding/2 $padding;
+        input[ type='file' ] {
+            display: none;
         }
+
+        @include for-640-down {
+            flex-basis: 100%;
+            margin-right: 0;
+        }
+    }
+
+    p {
+        margin-bottom: $margin !important;
     }
 }
 
