Added How We Work page, adjusted code for page titles and banner images

--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -344,6 +344,10 @@ a:hover {
   margin-bottom: 30px !important;
 }
 
+.background-position-y-center {
+  background-position-y: center !important;
+}
+
 .ra__dark input::-moz-placeholder {
   color: rgba(255, 255, 255, 0.5) !important;
 }
