--- a/resources/sass/_init.scss
+++ b/resources/sass/_init.scss
@@ -104,3 +104,7 @@ a {
 .mb-2x {
     margin-bottom: $margin*2 !important;
 }
+
+.background-position-y-center {
+    background-position-y: center !important;
+}
