--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -174,6 +174,7 @@ html.sticky-header-active .header-logo {
 .#{$mf} {
     // Banners
     &#{$es}banner {
+        background-attachment: fixed;
         background-position-y: top;
         background-repeat: no-repeat;
         background-size: cover;
@@ -183,7 +184,7 @@ html.sticky-header-active .header-logo {
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 350px;
+            min-height: 385px;
             text-align: center;
         }
 
@@ -389,7 +390,9 @@ html.sticky-header-active .header-logo {
             }
 
             &#{$ms}socials {
-                flex: 0 auto;
+                @include for-900-up {
+                    flex: 0 auto;
+                }
 
                 .mf__footer__col__inner__link {
                     display: inline-block;
