--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -7,6 +7,7 @@
         font-size: $font-size;
         line-height: 1;
         padding: $padding;
+        text-decoration: none;
 
         &-success,
         &-primary,
