--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -949,6 +949,7 @@ html.sticky-header-active .header-logo img {
 
 .mf__banner {
   background-attachment: fixed;
+  background-position-x: center;
   background-position-y: top;
   background-repeat: no-repeat;
   background-size: cover;
